# vxl-parser

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  mix.exs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-elixir.yml  build-js.yml  build-rust.yml  build.yml  release-elixir.yml  release.yml  security-audit-nightly.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  build.rs
core/benches/: bench_main.rs
core/benches/benchmarks/: basic.rs
core/src/: address.rs  boolean.rs  collection.rs  comment.rs  identifier.rs  lib.rs  list.rs  n.rs  numeric.rs  operation.rs  parser.rs  result.rs  tokens.rs  tracer.rs
core/src/parser/: address.rs  array.rs  boolean.rs  collection.rs  comment.rs  identifier.rs  list.rs  literal.rs  mod.rs  n.rs  node.rs  number.rs  numeric.rs  operation.rs  result.rs  string.rs  tokens.rs
elixir/: .credo.exs  .gitignore  .tool-versions  Cargo.toml  README.md  checksum-Elixir.VXLParser.exs  mix.exs
elixir/lib/: build_info.ex  vxl_parser.ex
elixir/native/src/: lib.rs
elixir/src/: build_info.rs  parser.rs
elixir/test/: vxl_parser_test.exs
elixir/vxl_elixir/: Cargo.toml
elixir/vxl_elixir/.cargo/: config
elixir/vxl_elixir/src/: lib.rs
examples/: if.vxl  line_comments.vxl  move.vxl
js/: Cargo.toml  README.md  build.rs
js/src/: build_info.rs  lib.rs  logging.rs  parser.rs  timer.rs
js/tests/common/: mod.rs
