[package]
name = "cli"
version = "0.0.13"
authors = ["Vektor Engineering <engineering@vektor.finance>"]
edition = "2018"
homepage = "https://vektor.finance"
repository = "https://github.com/vektor-finance/vxl-parser.git"
description = "Vektor's VXL parser - command line app"
license = "UNLICENSED"

include = [
  "CHANGELOG.md",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "build.rs"
]

[features]
default = []
trace = ["nom-tracable/trace", "core/trace"]

[dependencies]
core = { path = "../core" }
nom-tracable = "0.8.0"
serde_json = "1.0.59"
clap = { version = "3.0.13", features = ["cargo"] }

[[bin]]
name = "vxl"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0.53"
vergen = { version = "6.0.2", default-features = false, features = ["build", "git"] }
