[package]
name = "core"
version = "0.0.4"
authors = ["Vektor Engineering <engineering@vektor.finance>"]
edition = "2018"
homepage = "https://vektor.finance"
repository = "https://github.com/vektor-finance/vxl-parser.git"
description = "Vektor's VXL parser - core library"
license = "UNLICENSED"

include = [
  "CHANGELOG.md",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "build.rs"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
trace = ["nom-tracable/trace"]

[dependencies]
nom = { version = "6.1.2", default_features = false, features = ["std"] }
nom_locate = "3.0.2"
nom-tracable = "0.7.0"
paste = "1.0.6"
thiserror = "1.0.30"
serde_with = "1.11.0"
serde = { version = " 1.0.136", features = ["derive", "rc"] }

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
criterion = "0.3.5"
rstest = "0.12.0"
serde_test = "1.0.117"

[[bench]]
name = "bench_main"
harness = false
